--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Abdel Gafoor Haddad"
-  avatar           : "Photograph - 3.jpg"
+  avatar           : "Photograph3.jpg"
   bio              : "PhD Candidate in Robotics"
   location         : "Abu Dhabi, United Arab Emirates"
   employer         : "Khalifa University"
