--- a/_config.yml
+++ b/_config.yml
@@ -81,13 +81,13 @@ analytics:
 # Site Author
 author:
   name             : "Abdel Gafoor Haddad"
-  avatar           : "profile.png"
+  avatar           : "Photograph3.jpg"
   bio              : "PhD Candidate in Robotics"
   location         : "Abu Dhabi, United Arab Emirates"
   employer         : "Khalifa University"
   pubmed           :
   googlescholar    :
-  email            : "abdelgafoor.haddad@ku.ac.ae
+  email            : "abdelgafoor.haddad@ku.ac.ae"
   researchgate     :
   uri              :
   bitbucket        :
