--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Awards"
     url: /talks/
 
-  - title: "Publications"
-    url: https://scholar.google.com/citations?hl=en&user=dBJrbxEAAAAJ
+  - title: "Research"
+    url: /publications/
     
 #  - title: "Talks"
 #    url: /talks/    
