--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/abdel-gafoor-haddad-0a8656126/"
+  linkedin         : "abdel-gafoor-haddad-0a8656126"
   orcid            :
   pinterest        :
   soundcloud       :
