--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Abdel Gafoor Haddad"
-  avatar           : "pic-snow.jpg"
+  avatar           : "pic-snow2.jpg"
   bio              : "PhD Candidate in Robotics at Khalifa University"
   location         : "Abu Dhabi, United Arab Emirates"
   employer         : #"Khalifa University"
